Fixed [SEE-1319]: plist doesn't support files of type 'TEXT'.

--- a/subethaedit/Info.plist
+++ b/subethaedit/Info.plist
@@ -193,6 +193,7 @@ NpVfZko6DqvJJcLklZ8=
 			<key>CFBundleTypeOSTypes</key>
 			<array>
 				<string>****</string>
+				<string>TEXT</string>
 			</array>
 			<key>CFBundleTypeRole</key>
 			<string>Editor</string>
