* TCMMMSession.[h|m]   Introduced helper protocol to encapsulate AppKit dependent functionality. When   AppKit is present, the corresponding helper class is instantiated.   A Foundation-aware implemention of the helper also exists.
* TCMMMUser.m
  Rewrote dictionaryRepresentation so it no longer uses the nil-terminated list
  constructor which might produce unexpected results.

* SessionProfile.m
  Fixed typo in debug log message.

--- a/.gitattributes
+++ b/.gitattributes
@@ -1292,6 +1292,10 @@ TCMMillionMonkeys/TCMMMPresenceManager.h -text
 TCMMillionMonkeys/TCMMMPresenceManager.m -text
 TCMMillionMonkeys/TCMMMSession.h -text
 TCMMillionMonkeys/TCMMMSession.m -text
+TCMMillionMonkeys/TCMMMSessionAppKitHelper.h -text
+TCMMillionMonkeys/TCMMMSessionAppKitHelper.m -text
+TCMMillionMonkeys/TCMMMSessionFoundationHelper.h -text
+TCMMillionMonkeys/TCMMMSessionFoundationHelper.m -text
 TCMMillionMonkeys/TCMMMState.h -text
 TCMMillionMonkeys/TCMMMState.m -text
 TCMMillionMonkeys/TCMMMStatusProfile.h -text
