Added SDDocument to seed. A single document is instantiated and announced at the moment. Also applied fix to TCMMMUser which had already been applied in trunk (NSData instead of NSString for uID).

--- a/.gitattributes
+++ b/.gitattributes
@@ -1461,5 +1461,7 @@ see/see.vers -text
 seed/Info.plist -text
 seed/SDAppController.h -text
 seed/SDAppController.m -text
+seed/SDDocument.h -text
+seed/SDDocument.m -text
 seed/main.m -text
 seed/seed_Prefix.pch -text
