- added subethaengine banner

--- a/.gitattributes
+++ b/.gitattributes
@@ -88,6 +88,11 @@ artwork/website/ShotsPure/Picture[!!-~]7.png -text
 artwork/website/ShotsPure/Shot1.tiff -text
 artwork/website/StylePrefs.psd -text
 artwork/website/SubEthaEditImage.psd -text
+artwork/website/SubethaEngineBanner.lineform/0B7D5DC5-3479-4779-BBFE-2EA10955C484-11020-000066D77A0B66C5.png -text
+artwork/website/SubethaEngineBanner.lineform/1AD8948D-0BCD-4EB9-A366-893A62C88F3C-11020-000066D776D851A4.png -text
+artwork/website/SubethaEngineBanner.lineform/C9955C5E-2B88-4A44-93B7-6EF507DEDD0E-11020-000066D77C7FDC21.png -text
+artwork/website/SubethaEngineBanner.lineform/D034F389-E510-4868-A078-AA440AFF4F58-11020-000066D778AB3B67.png -text
+artwork/website/SubethaEngineBanner.lineform/data -text
 artwork/website/TolleProgramme.psd -text
 artwork/website/buynow.psd -text
 artwork/website/cocoaradiobanner.psd -text
