- added SDDocumentManager - added new location for documents - configurable via the default document_root and defaulting to /Library/SeeServer/Documents - changed the layout of the config.plist - if no config.plist path is given, /Library/SeeServer/config.plist is read - config.plist now is a dictionary with currently a single array entry called "InitialFiles", in this entry there are again dictionaries with the keys ("file" and "mode". File is a path relative to the document root. mode is the mode Identifier string.

--- a/.gitattributes
+++ b/.gitattributes
@@ -1486,5 +1486,7 @@ seed/SDAppController.h -text
 seed/SDAppController.m -text
 seed/SDDocument.h -text
 seed/SDDocument.m -text
+seed/SDDocumentManager.h -text
+seed/SDDocumentManager.m -text
 seed/main.m -text
 seed/seed_Prefix.pch -text
