--- a/.gitattributes
+++ b/.gitattributes
@@ -32,6 +32,7 @@ artwork/icons/Hydra2-1.psd -text
 artwork/icons/Hydra2-2.psd -text
 artwork/icons/Hydra3b-2.psd -text
 artwork/icons/HydraFiles.icns -text
+artwork/icons/Seed.psd -text
 artwork/icons/ShowChangeMarks.psd -text
 artwork/icons/SubEthaEdit_Splash.psd -text
 artwork/icons/Symbols/Symbol!.psd -text
