--- a/.gitattributes
+++ b/.gitattributes
@@ -774,6 +774,8 @@ subethaedit/NSRangeSpecifierTCMAdditions.h -text
 subethaedit/NSRangeSpecifierTCMAdditions.m -text
 subethaedit/NSSavePanelTCMAdditions.h -text
 subethaedit/NSSavePanelTCMAdditions.m -text
+subethaedit/NSScreenTCMAdditions.h -text
+subethaedit/NSScreenTCMAdditions.m -text
 subethaedit/NSStringSEEAdditions.h -text
 subethaedit/NSStringSEEAdditions.m -text
 subethaedit/NSWindowScriptingAdditions.h -text
