* Info.plist   Bumped version to 2.6.4.
* see/main.m
  Removed global version variables. Now getting version information via own
  bundled Info.plist.

* see/Info.plist
  Added Info.plist for the see command.

* SubEthaEdit.xcodeproj
  Linking Info.plist to the see binary. Got rid of old mechanism which compiled
  global variables into the binary.

--- a/.gitattributes
+++ b/.gitattributes
@@ -1619,6 +1619,7 @@ subethaedit/artwork/monkey32.png -text
 subethaedit/artwork/style.icns -text
 subethaedit/createDiskImage.sh -text
 subethaedit/main.m -text
+subethaedit/see/Info.plist -text
 subethaedit/see/main.m -text
 subethaedit/see/see.1 -text
 subethaedit/see/see.vers -text
