- added useful information

--- a/.gitattributes
+++ b/.gitattributes
@@ -1121,6 +1121,7 @@ Preferences.nib/keyedobjects.nib -text
 /PullDownButtonCell.h -text
 /PullDownButtonCell.m -text
 /RE.txt -text
+/README.txt -text
 /RadarScroller.h -text
 /RadarScroller.m -text
 /RegexSymbolDefinition.h -text
