- kind of remodeled a mode from the html mode, linking the ruby mode and adding stuff. - currently this does not work because of a) an import of a mode that is extended with keywords b) state-link tags referencing that newly imported state

--- a/.gitattributes
+++ b/.gitattributes
@@ -415,6 +415,27 @@ Modes/Diff.mode/Contents/Resources/ModeSettings.xml -text
 Modes/Diff.mode/Contents/Resources/RegexSymbols.xml -text
 Modes/Diff.mode/Contents/Resources/SymbolID.png -text
 Modes/Diff.mode/Contents/Resources/SyntaxDefinition.xml -text
+Modes/ERB.mode/Contents/Info.plist -text
+Modes/ERB.mode/Contents/Resources/AutocompleteAdditions.txt -text
+Modes/ERB.mode/Contents/Resources/ChangeLog.txt -text
+Modes/ERB.mode/Contents/Resources/English.lproj/InfoPlist.strings -text
+Modes/ERB.mode/Contents/Resources/English.lproj/Localizable.strings -text
+Modes/ERB.mode/Contents/Resources/German.lproj/InfoPlist.strings -text
+Modes/ERB.mode/Contents/Resources/German.lproj/Localizable.strings -text
+Modes/ERB.mode/Contents/Resources/ModeSettings.xml -text
+Modes/ERB.mode/Contents/Resources/RegexSymbols.xml -text
+Modes/ERB.mode/Contents/Resources/Scripts/Add[!!-~]Link.scpt -text
+Modes/ERB.mode/Contents/Resources/Scripts/CloseLastTag.scpt -text
+Modes/ERB.mode/Contents/Resources/Scripts/Comment[!!-~]Selection.scpt -text
+Modes/ERB.mode/Contents/Resources/Scripts/Insert[!!-~]HTML[!!-~]Color.scpt -text
+Modes/ERB.mode/Contents/Resources/Scripts/Validate.scpt -text
+Modes/ERB.mode/Contents/Resources/Scripts/shell/closetag.pl -text
+Modes/ERB.mode/Contents/Resources/Scripts/shell/validate.pl -text
+Modes/ERB.mode/Contents/Resources/Symbol!.png -text
+Modes/ERB.mode/Contents/Resources/SymbolD.png -text
+Modes/ERB.mode/Contents/Resources/SymbolH.png -text
+Modes/ERB.mode/Contents/Resources/Symbola.png -text
+Modes/ERB.mode/Contents/Resources/SyntaxDefinition.xml -text
 Modes/HTML.mode/Contents/Info.plist -text
 Modes/HTML.mode/Contents/Resources/AutocompleteAdditions.txt -text
 Modes/HTML.mode/Contents/Resources/ChangeLog.txt -text
