--- a/Info.plist
+++ b/Info.plist
@@ -215,6 +215,26 @@
 			<key>LSTypeIsPackage</key>
 			<true/>
 		</dict>
+		<dict>
+			<key>CFBundleTypeExtensions</key>
+			<array>
+				<string>seetext</string>
+			</array>
+			<key>CFBundleTypeIconFile</key>
+			<string>seetext.icns</string>
+			<key>CFBundleTypeName</key>
+			<string>SEETextType</string>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>LSItemContentTypes</key>
+			<array>
+				<string>com.codingmonkeys.subethaedit.seetext</string>
+			</array>
+			<key>LSTypeIsPackage</key>
+			<false/>
+			<key>NSDocumentClass</key>
+			<string>PlainTextDocument</string>
+		</dict>
 	</array>
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}${SYSTEM_VERSION_CHECK_SUFFIX}</string>
@@ -347,6 +367,23 @@ NpVfZko6DqvJJcLklZ8=
 			<dict>
 				<key>public.filename-extension</key>
 				<string>seestyle</string>
+			</dict>
+		</dict>
+		<dict>
+			<key>UTTypeConformsTo</key>
+			<array>
+				<string>public.data</string>
+			</array>
+			<key>UTTypeDescription</key>
+			<string>SubEthaEdit Text</string>
+			<key>UTTypeIconFile</key>
+			<string>style.icns</string>
+			<key>UTTypeIdentifier</key>
+			<string>com.codingmonkeys.subethaedit.syntaxstyle</string>
+			<key>UTTypeTagSpecification</key>
+			<dict>
+				<key>public.filename-extension</key>
+				<string>seetext</string>
 			</dict>
 		</dict>
 	</array>
