--- a/.gitattributes
+++ b/.gitattributes
@@ -69,6 +69,7 @@ artwork/icons/style32.psd -text
 artwork/icons/txt.icns -text
 artwork/mockups/RendezvousBrowser.psd -text
 artwork/mockups/RendezvousBrowser2.psd -text
+artwork/mockups/statistics.psd -text
 artwork/website/251-Banner.lineform/data -text
 artwork/website/251-Banner.lineform/image0.png -text
 artwork/website/251-Banner.lineform/image1.png -text
