- fixed applescript on leopard - won't change the sdef any further towards 10.4 because that all is a mess i don't want to touch and which won't bring any real benefits because there are still bugs in sdef and 10.4 - filed a bug with cocoa scripting 5437979	 9A527: Cocoa scripting doesn't coerce Properties correctly which essentially brakes the make new document with properties {} syntax - hope this gets fixed - would be horror to work around

--- a/.gitattributes
+++ b/.gitattributes
@@ -666,6 +666,7 @@ MoreIsBetter/MoreUNIX.h -text
 /NSApplicationTCMAdditions.m -text
 /NSColorTCMAdditions.h -text
 /NSColorTCMAdditions.m -text
+/NSCoreSuite.sdef -text
 /NSCursorSEEAdditions.h -text
 /NSCursorSEEAdditions.m -text
 /NSImageTCMAdditions.h -text
