- added a rather ugly but colorful ssl lock to the browser and tested the placing in front of the name. not to thrilled about it, but have a look.

--- a/.gitattributes
+++ b/.gitattributes
@@ -1547,8 +1547,10 @@ artwork/hud_buttonLeft-P.tiff -text
 artwork/hud_buttonRight-N.tiff -text
 artwork/hud_buttonRight-P.tiff -text
 artwork/hud_titlebar-close.tiff -text
+artwork/lock_hot.psd -text
 artwork/monkey32.png -text
 artwork/seetext.icns -text
+artwork/ssllock.png -text
 artwork/style.icns -text
 /createDiskImage.sh -text
 /main.m -text
