- added a lock to the titlebar - added nececary mechanisms to transport a change of session

--- a/.gitattributes
+++ b/.gitattributes
@@ -1454,6 +1454,7 @@ artwork/InvisibleCharactersShow.png -text
 artwork/InvitationBadge1-2.tiff -text
 artwork/InvitationBadge3.tiff -text
 artwork/LibraryFolderIcon.tiff -text
+artwork/LockTitlebar.png -text
 artwork/LoginButton.png -text
 artwork/LoginButton.psd -text
 artwork/LoginButtonIn.png -text
