- made seed use set initialDictionaryRepresentation - added TCM_ISSEED define to seed_prefix.pch - moved dictionaryRepresentation from the TextStorage into the NSMutableAttributedStringAdditions to share the code between seed and see

--- a/.gitattributes
+++ b/.gitattributes
@@ -96,6 +96,8 @@ Directory/SDDirectoryUserGroupList.m -text
 /DocumentModeManager.m -text
 /DocumentProxyWindowController.h -text
 /DocumentProxyWindowController.m -text
+/DocumentSharedMethods.h -text
+/DocumentSharedMethods.m -text
 /EditPreferences.h -text
 /EditPreferences.m -text
 /EncodingDoctorDialog.h -text
