- added HMBlkAppKit for the statistics HUD - changed the statisticswindow to reflect the measures and look in the mock up - added some random graph painting so the bottom part is mocked up with random data

--- a/.gitattributes
+++ b/.gitattributes
@@ -316,12 +316,108 @@ German.lproj/WebPreview.nib/keyedobjects.nib -text
 /GlassButtonCell.m -text
 /GutterRulerView.h -text
 /GutterRulerView.m -text
+HMBlkAppKit1.1/English.lproj/InfoPlist.strings -text
+HMBlkAppKit1.1/HMBlkAppKit.xcodeproj/dom.mode2 -text
+HMBlkAppKit1.1/HMBlkAppKit.xcodeproj/dom.pbxuser -text
+HMBlkAppKit1.1/HMBlkAppKit.xcodeproj/mkino.mode1 -text
+HMBlkAppKit1.1/HMBlkAppKit.xcodeproj/mkino.pbxuser -text
+HMBlkAppKit1.1/HMBlkAppKit.xcodeproj/project.pbxproj -text
+HMBlkAppKit1.1/HMBlkAppKit_Prefix.pch -text
+HMBlkAppKit1.1/source/HMDTAppKit/HMAppKitEx.h -text
+HMBlkAppKit1.1/source/HMDTAppKit/HMAppKitEx.m -text
+HMBlkAppKit1.1/source/HMDTAppKit/HMBlkAppKit.h -text
+HMBlkAppKit1.1/source/HMDTAppKit/HMBlkBox.h -text
+HMBlkAppKit1.1/source/HMDTAppKit/HMBlkBox.m -text
+HMBlkAppKit1.1/source/HMDTAppKit/HMBlkButton.h -text
+HMBlkAppKit1.1/source/HMDTAppKit/HMBlkButton.m -text
+HMBlkAppKit1.1/source/HMDTAppKit/HMBlkButtonCell.h -text
+HMBlkAppKit1.1/source/HMDTAppKit/HMBlkButtonCell.m -text
+HMBlkAppKit1.1/source/HMDTAppKit/HMBlkContentView.h -text
+HMBlkAppKit1.1/source/HMDTAppKit/HMBlkContentView.m -text
+HMBlkAppKit1.1/source/HMDTAppKit/HMBlkOutlineView.h -text
+HMBlkAppKit1.1/source/HMDTAppKit/HMBlkOutlineView.m -text
+HMBlkAppKit1.1/source/HMDTAppKit/HMBlkPanel.h -text
+HMBlkAppKit1.1/source/HMDTAppKit/HMBlkPanel.m -text
+HMBlkAppKit1.1/source/HMDTAppKit/HMBlkProgressIndicator.h -text
+HMBlkAppKit1.1/source/HMDTAppKit/HMBlkProgressIndicator.m -text
+HMBlkAppKit1.1/source/HMDTAppKit/HMBlkScrollView.h -text
+HMBlkAppKit1.1/source/HMDTAppKit/HMBlkScrollView.m -text
+HMBlkAppKit1.1/source/HMDTAppKit/HMBlkScroller.h -text
+HMBlkAppKit1.1/source/HMDTAppKit/HMBlkScroller.m -text
+HMBlkAppKit1.1/source/HMDTAppKit/HMBlkSegmentedCell.h -text
+HMBlkAppKit1.1/source/HMDTAppKit/HMBlkSegmentedCell.m -text
+HMBlkAppKit1.1/source/HMDTAppKit/HMBlkSegmentedControl.h -text
+HMBlkAppKit1.1/source/HMDTAppKit/HMBlkSegmentedControl.m -text
+HMBlkAppKit1.1/source/HMDTAppKit/HMBlkTableHeaderCell.h -text
+HMBlkAppKit1.1/source/HMDTAppKit/HMBlkTableHeaderCell.m -text
+HMBlkAppKit1.1/source/HMDTAppKit/HMBlkTableView.h -text
+HMBlkAppKit1.1/source/HMDTAppKit/HMBlkTableView.m -text
+HMBlkAppKit1.1/source/HMDTAppKit/resource/blkCancelButton.tiff -text
+HMBlkAppKit1.1/source/HMDTAppKit/resource/blkCloseButton.tiff -text
+HMBlkAppKit1.1/source/HMDTAppKit/resource/blkContextButton.tiff -text
+HMBlkAppKit1.1/source/HMDTAppKit/resource/blkContextButtonSelected.tiff -text
+HMBlkAppKit1.1/source/HMDTAppKit/resource/blkDiscCollapsed.tiff -text
+HMBlkAppKit1.1/source/HMDTAppKit/resource/blkDiscExpanded.tiff -text
+HMBlkAppKit1.1/source/HMDTAppKit/resource/blkDiscTransient.tiff -text
+HMBlkAppKit1.1/source/HMDTAppKit/resource/blkFindButton.tiff -text
+HMBlkAppKit1.1/source/HMDTAppKit/resource/blkPanelLB.tiff -text
+HMBlkAppKit1.1/source/HMDTAppKit/resource/blkPanelLM.tiff -text
+HMBlkAppKit1.1/source/HMDTAppKit/resource/blkPanelLT.tiff -text
+HMBlkAppKit1.1/source/HMDTAppKit/resource/blkPanelMB.tiff -text
+HMBlkAppKit1.1/source/HMDTAppKit/resource/blkPanelMM.tiff -text
+HMBlkAppKit1.1/source/HMDTAppKit/resource/blkPanelMT.tiff -text
+HMBlkAppKit1.1/source/HMDTAppKit/resource/blkPanelRB.tiff -text
+HMBlkAppKit1.1/source/HMDTAppKit/resource/blkPanelRM.tiff -text
+HMBlkAppKit1.1/source/HMDTAppKit/resource/blkPanelRT.tiff -text
+HMBlkAppKit1.1/source/HMDTAppKit/resource/blkProgressBack.tiff -text
+HMBlkAppKit1.1/source/HMDTAppKit/resource/blkProgressBar.tiff -text
+HMBlkAppKit1.1/source/HMDTAppKit/resource/blkProgressIndeterminate.tiff -text
+HMBlkAppKit1.1/source/HMDTAppKit/resource/blkScrollerBackHL.tiff -text
+HMBlkAppKit1.1/source/HMDTAppKit/resource/blkScrollerBackHM.tiff -text
+HMBlkAppKit1.1/source/HMDTAppKit/resource/blkScrollerBackHRLeft.tiff -text
+HMBlkAppKit1.1/source/HMDTAppKit/resource/blkScrollerBackHRLeftSelected.tiff -text
+HMBlkAppKit1.1/source/HMDTAppKit/resource/blkScrollerBackHRRight.tiff -text
+HMBlkAppKit1.1/source/HMDTAppKit/resource/blkScrollerBackHRRightSelected.tiff -text
+HMBlkAppKit1.1/source/HMDTAppKit/resource/blkScrollerBackVBDown.tiff -text
+HMBlkAppKit1.1/source/HMDTAppKit/resource/blkScrollerBackVBDownSelected.tiff -text
+HMBlkAppKit1.1/source/HMDTAppKit/resource/blkScrollerBackVBUp.tiff -text
+HMBlkAppKit1.1/source/HMDTAppKit/resource/blkScrollerBackVBUpSelected.tiff -text
+HMBlkAppKit1.1/source/HMDTAppKit/resource/blkScrollerBackVM.tiff -text
+HMBlkAppKit1.1/source/HMDTAppKit/resource/blkScrollerBackVT.tiff -text
+HMBlkAppKit1.1/source/HMDTAppKit/resource/blkScrollerKnobHL.tiff -text
+HMBlkAppKit1.1/source/HMDTAppKit/resource/blkScrollerKnobHM.tiff -text
+HMBlkAppKit1.1/source/HMDTAppKit/resource/blkScrollerKnobHR.tiff -text
+HMBlkAppKit1.1/source/HMDTAppKit/resource/blkScrollerKnobVB.tiff -text
+HMBlkAppKit1.1/source/HMDTAppKit/resource/blkScrollerKnobVM.tiff -text
+HMBlkAppKit1.1/source/HMDTAppKit/resource/blkScrollerKnobVT.tiff -text
+HMBlkAppKit1.1/source/HMDTAppKit/resource/blkSegmentDivider.tiff -text
+HMBlkAppKit1.1/source/HMDTAppKit/resource/blkSegmentL.tiff -text
+HMBlkAppKit1.1/source/HMDTAppKit/resource/blkSegmentM.tiff -text
+HMBlkAppKit1.1/source/HMDTAppKit/resource/blkSegmentR.tiff -text
+HMBlkAppKit1.1/source/HMDTAppKit/resource/blkSegmentSelectedL.tiff -text
+HMBlkAppKit1.1/source/HMDTAppKit/resource/blkSegmentSelectedM.tiff -text
+HMBlkAppKit1.1/source/HMDTAppKit/resource/blkSegmentSelectedR.tiff -text
+HMBlkAppKit1.1/source/HMDTFoundation/HMFoundationEx.h -text
+HMBlkAppKit1.1/source/HMDTFoundation/HMFoundationEx.m -text
+HMBlkAppKit1.1/source/application/AppController.h -text
+HMBlkAppKit1.1/source/application/AppController.m -text
+HMBlkAppKit1.1/source/application/English.lproj/InfoPlist.strings -text
+HMBlkAppKit1.1/source/application/English.lproj/MainMenu.nib/blkContextButton.tiff -text
+HMBlkAppKit1.1/source/application/English.lproj/MainMenu.nib/blkContextButtonSelected.tiff -text
+HMBlkAppKit1.1/source/application/English.lproj/MainMenu.nib/classes.nib -text
+HMBlkAppKit1.1/source/application/English.lproj/MainMenu.nib/info.nib -text
+HMBlkAppKit1.1/source/application/English.lproj/MainMenu.nib/keyedobjects.nib -text
+HMBlkAppKit1.1/source/application/Info.plist -text
+HMBlkAppKit1.1/source/application/main.m -text
+HMBlkAppKit1.1/source/framework/Info.plist -text
 HTMLExport/Base.css -text
 HTMLExport/Base.html -text
 /HUDButton.h -text
 /HUDButton.m -text
 /HUDButtonCell.h -text
 /HUDButtonCell.m -text
+/HUDStatisticGraphView.h -text
+/HUDStatisticGraphView.m -text
 /HandshakeProfile.h -text
 /HandshakeProfile.m -text
 /HueToColorValueTransformer.h -text
