- fixed issue where mode endcoding wasn't used anymore, but always the universal dectector encoding was used - made progress on the statistics window although breaking the bindings update (have to resize for update now)

--- a/.gitattributes
+++ b/.gitattributes
@@ -418,6 +418,8 @@ HTMLExport/Base.html -text
 /HUDButtonCell.m -text
 /HUDStatisticGraphView.h -text
 /HUDStatisticGraphView.m -text
+/HUDStatisticPersonCell.h -text
+/HUDStatisticPersonCell.m -text
 /HandshakeProfile.h -text
 /HandshakeProfile.m -text
 /HueToColorValueTransformer.h -text
